// Vitest Snapshot v1

exports[`highlights basic javascript 1`] = `
VFile {
  "cwd": "/home/sachinraja/projects/rehype-tree-sitter-highlight",
  "data": {},
  "history": [],
  "messages": [],
  "value": "<h1>Heading</h1>
<p>Text</p>
<pre class=\\"source\\">
    <span class=\\"keyword\\">const</span> <span class=\\"variable\\">hello</span> <span class=\\"operator\\">=</span> <span class=\\"string\\">\\"World\\"</span><span class=\\"punctuation delimiter\\">;</span>
  </pre>
<p>More text</p>",
}
`;

exports[`skips unknown language 1`] = `
VFile {
  "cwd": "/home/sachinraja/projects/rehype-tree-sitter-highlight",
  "data": {},
  "history": [],
  "messages": [],
  "value": "<h1>Heading</h1>
<p>Text</p>
<pre>  <code class=\\"unknown\\">
    Hello!
  </code>
</pre>
<p>More text</p>",
}
`;
